--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 ---
-title: 朝闻道 (For the Eureka)
+title: For the Eureka!
 ---
 
-<h2>Welcome</h2>
-
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
-
-<p>Welcome to my blog!</p>
-
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
+<!--<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" /> -->
 
 <h2>Posts</h2>
 $partial("templates/item-list.html")$
